# Naiad-Buddies

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GEOio  Makefile  Makefile.gnu  Makefile_10_5.gnu  README  README.creole  cmake_install.cmake  emp2geo.make  geo2emp.make  init-cmake-naiad-buddy-renderman-win.ps1  naiad_distance.cc  naiad_test.ass
3delight/: CMakeLists.txt
3dsMax/: naiad-3ds-max-buddy.sln
3dsMax/EmpImport/: DllEntry.cpp  EmpImport.cpp  EmpImport.def  EmpImport.h  EmpImport.rc  EmpImport.vcxproj  EmpImport.vcxproj.filters  EmpMeshObject.cpp  EmpMeshObject.h  EmpUtils.cpp  EmpUtils.h  resource.h
3dsMax/maxProject1/: DllEntry.cpp  Naiad3dsMaxBuddy.cpp  Naiad3dsMaxBuddy.def  Naiad3dsMaxBuddy.h  Naiad3dsMaxBuddy.rc  maxProject1.vcxproj  maxProject1.vcxproj.filters  resource.h
3dsMax/maxProject2/: DllEntry.cpp  RCa03852  maxProject2.cpp  maxProject2.def  maxProject2.h  maxProject2.rc  maxProject2.vcxproj  maxProject2.vcxproj.filters  resource.h
Arnold/: CMakeLists.txt
Arnold/cmd/: CMakeLists.txt  emp2ass.cc
Arnold/common/: NbAi.cc
Arnold/plug-ins/: CMakeLists.txt  EMP-Read.cc  naiad_geo.cc  nd.cc
Arnold/user-ops/: CMakeLists.txt
Debug/: makefile  sources.mk
Debug/plug-ins/: subdir.mk
apps/: CMakeLists.txt
apps/pdcToEmpConverter/src/: CMakeLists.txt  main.cpp
arnold/: CMakeLists.txt  README.creole
arnold/common/: NbAi.h  NbAiOutput.h  NbAiOutputParams.h
arnold/plug-ins/: CMakeLists.txt  naiad_distance_field.cc
arnold/user-ops/: CMakeLists.txt
body-io/: BgeoReader.h  BgeoWriter.h  PrtReader.h  PrtWriter.h  plugin.cc
body-io/PrtHeaders/: PRTReservedBytes.h  simple_static_assert.h
cmd/: CMakeLists.txt  LICENSE  Makefile  PRTParticleData.h  PRTReservedBytes.h  README  cmake_install.cmake  emp2prt.cc  rop_naiadcamera.make
cmd/src/: empsave.C  geo2emp.C
common/: Bgeo.cc  Bgeo.h  NbAi.cc  NbAi.h  NbAiOutput.h  NbAiOutputAssAsciiWrite.h  NbAiOutputAssWrite.h  NbAiOutputRender.h
config/: CMakeLists.txt  NaiadBuddyForMayaModule.txt.in  naiadBuddyForMayaConfig_bash.in  naiadBuddyForMayaConfig_csh.in
demos/: CMakeLists.txt
demos/waterTank/: CMakeLists.txt
houdini/: .gitignore  CMakeLists.txt  README.creole
houdini/body-io/: Bgeo.cc  BgeoReader.h  BgeoWriter.h  CMakeLists.txt  plugin.cc
houdini/cmd/: GEOio  Makefile
include/: geo2emp.h  geo2emp_utils.h
krakatoa/: .gitignore  CMakeLists.txt
krakatoa/body-io/: CMakeLists.txt  PrtWriter.h  plugin.cc
krakatoa/body-io/PrtHeaders/: PRTChannelDefinitionSection.h  PRTFileHeader.h  PRTParticleData.h
krakatoa/cmd/: CMakeLists.txt  PRTChannelDefinitionSection.h  PRTFileHeader.h  emp2prt.cc
maya/: .gitignore  CMakeLists.txt  README.creole  init-cmake-naiad-buddy-maya-win.ps1
maya/apps/pdcToEmpConverter/docs/: CMakeLists.txt  index.html
maya/config/: CMakeLists.txt  buddy.mod  naiadBuddyForMayaConfig_bash.in  setup_bash.in  setup_csh.in
maya/docs/: CMakeLists.txt  compile.html  index.html  setup.html
maya/plugin/: CMakeLists.txt
maya/plugin/docs/: CMakeLists.txt  Doxyfile.in  UserGuide.odt  index.html  pluginMenu.html
maya/plugin/icons/: CMakeLists.txt
maya/plugin/src/: CMakeLists.txt  EMPLoaderNode.cpp  EMPSaverNode.cpp  bodyDisplayLocator.h  bodyFieldNode.cpp  bodyFieldNode.h  bodyToMeshNode.cpp  bodyToMeshNode.h  bodyTransformExtractor.cpp  bodyTransformExtractor.h  bodyVectorChannelExtractor.h  cameraToBodyNode.cpp  cameraToBodyNode.h  mayaToNaiadUtils.cpp  mayaToNaiadUtils.h  naiadBodyDataType.cpp  naiadBodyDataType.h  naiadCommand.cpp  naiadCommand.h  naiadEmpInfoCommand.cpp  naiadMayaIDs.h  naiadToMayaUtils.h  particleEmitter.h  particlesToBodyNode.cpp  plugin.cpp  surfaceToBodyNode.cpp
old/: naiad_test.ass
plug-ins/: CMakeLists.txt  EMP-Read.cc  naiad_distance_field.cc  naiad_geo.cc
plugin/icons/: CMakeLists.txt  out_NBuddyEMPSaver.xpm
plugin/mel/: AENBuddyBodyFieldTemplate.mel  AENBuddyBodyToMeshTemplate.mel  AENBuddyCameraToBodyTemplate.mel  AENBuddyEMPLoaderTemplate.mel  AENBuddyParticleEmitterTemplate.mel  AENBuddyParticlesToBodyTemplate.mel  AENBuddySurfaceToBodyTemplate.mel  CMakeLists.txt  caching.mel  empLoad.mel  naiadMenu.mel  naiadTemplateUtils.mel  unload.mel
plugin/src/: CMakeLists.txt  EMPLoaderNode.cpp  EMPLoaderNode.h  EMPSaverNode.h  bodyDisplayLocator.cpp  bodyDisplayLocator.h  bodyFieldNode.cpp  bodyToMeshNode.cpp  bodyVectorChannelExtractor.cpp  cameraToBodyNode.cpp  mayaToNaiadUtils.cpp  naiadBodyDataType.h  naiadEmpInfoCommand.h  naiadHolders.h  naiadToMayaUtils.cpp  naiadToMayaUtils.h  particleEmitter.cpp  particlesToBodyNode.cpp  particlesToBodyNode.h  plugin.cpp  surfaceToBodyNode.h
plugin/test/: blindDataTest.ma  particlesToBodyTest.ma
prman/: CMakeLists.txt
renderman/: CMakeLists.txt
renderman/common/: Rib-Mesh.h  Rib-Particle.h  Rib-Write.h
renderman/user-ops/: CMakeLists.txt  Delight-Mesh.BodyOp  Delight-Mesh.h  Delight-Particle.BodyOp  Delight-Particle.h  Delight-Rib-Write.BodyOp  Delight-Rib-Write.h  Mesh-Rib-Write.h  Particle-Rib-Terminal.BodyOp  Particle-Rib-Write.h  Renderman-Mesh.BodyOp  Renderman-Mesh.h  Renderman-Particle.BodyOp  Renderman-Particle.h  Renderman-Rib-Write.BodyOp  Renderman-Rib-Write.h  Rib-Write.BodyOp  Rib-Write.h  plugin.cc
scripts/: init-cmake-buddy-maya  init-cmake-nbuddies  init-cmake-nbuddies-win  make-nbuddies-debug  make-nbuddies-release
src/: SOP_EMPReader.C  cli_emp2geo.C  cli_geo2emp.C  empload.C  empsave.C  geo2emp.C  geo2emp.h  geo2emp_template  geo2emp_utils.C  install_template  main.C  nullstream.h
src/rop_naiadcam/: ROP_NaiadCam.h
stage-LINUX-x86_64/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
stage-LINUX-x86_64/debug2011/: CMakeCache.txt  Makefile  cmake_install.cmake
user-ops/: .cproject  .project  Bgeo-Read.h  Bgeo-Write.h  CMakeLists.txt  Makefile  Particle-Rib-Write.BodyOp  Particle-Rib-Write.h  cmake_install.cmake  plugin.cc
user-ops/Arnold-Render/: Arnold-Render.BodyOp  Arnold-Render.cc  CMakeLists.txt
vray/: CMakeLists.txt
vray/body-io/: CMakeLists.txt  VRMesh.h  VRScene.h  VrayReader.h  VrayWriter.h  plugin.cc
(+414 files in other folders)
